[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/UIResolutionSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/MasterSettings.gd" type="Script" id=3]
[ext_resource path="res://Sound/menu_click_003.ogg" type="AudioStream" id=4]
[ext_resource path="res://Codex.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="MasterSettings" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="MenuClickSound" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 4 )

[node name="Back3" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1940.0
margin_top = -1100.0
margin_right = -20.0
margin_bottom = -20.0
rect_scale = Vector2( 2, 2 )
color = Color( 0, 0, 0, 1 )

[node name="Back2" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -980.0
margin_top = -560.0
margin_right = 940.0
margin_bottom = 520.0
color = Color( 0.0588235, 0.137255, 0.27451, 1 )

[node name="Back" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -300.0
margin_right = 472.0
margin_bottom = 260.0
color = Color( 0.129412, 0.211765, 0.360784, 1 )

[node name="BackButton" type="Button" parent="Control"]
margin_left = -492.0
margin_top = 217.0
margin_right = -372.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 1 )
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -200.0
margin_right = 220.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 480.0
margin_bottom = 57.0
text = "Settings"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 61.0
margin_right = 480.0
margin_bottom = 124.0

[node name="Resolution" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_top = 3.0
margin_right = 229.0
margin_bottom = 60.0
text = "Resolution"

[node name="UIResolutionSelector" parent="Control/VBoxContainer/HBoxContainer3" instance=ExtResource( 1 )]
margin_left = 233.0
margin_right = 452.0
margin_bottom = 63.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 128.0
margin_right = 480.0
margin_bottom = 193.0

[node name="UIFullScreenSelector" type="CheckBox" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 65.0

[node name="Full Screen" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 4.0
margin_right = 264.0
margin_bottom = 61.0
text = "Full Screen"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 197.0
margin_right = 480.0
margin_bottom = 262.0

[node name="UIVSyncCheckbox" type="CheckBox" parent="Control/VBoxContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 65.0

[node name="VSync" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_top = 4.0
margin_right = 163.0
margin_bottom = 61.0
text = "VSync"

[connection signal="resolution_changed" from="Control/VBoxContainer/HBoxContainer3/UIResolutionSelector" to="." method="_on_UIResolutionSelector_resolution_changed"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/UIFullScreenSelector" to="." method="_on_UIFullScreenSelector_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer2/UIVSyncCheckbox" to="." method="_on_UIVSyncCheckbox_toggled"]
